featd: Refactor for MacOS